--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,21 @@
 .App {
   text-align: center;
 }
-
+.navbar{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+}
+.form_div{
+  width: 60%;
+  margin: auto;
+  margin-top: 50px;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+  padding: 25px 40px 20px 20px ;
 }
 
 @media (prefers-reduced-motion: no-preference) {
